# vfn-rag

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  cli.py  docker-compose.yml  example.env  latest  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: build-and-push.yml  docs-deploy.yml  docs-preview.yml  docs-release.yml  docs.yml  docs_release.yml  github-pages-mkdocs.yml  pypi-deployment.yml  testing.yml
api/: api.py  app.py
develop/: 404.html  change-log.html  design.drawio  index.html  license.html  objects.inv  sitemap.xml
develop/api/: index_manager.html  storage.html  utils.html
develop/guides/: contributing.html  developer-instructions.html  doctest.html  documentation.html  poetry.html  pre-commit-hooks.html  testing.html
develop/search/: search_index.json
docs/: .$design.drawio.bkp  change-log.md  index.md
docs/api/: index_manager.md  utils.md
docs/guides/: testing.md
docs/mkdocs/: change-log.md  index.md  license.md
docs/mkdocs/api/: app.md  cli.md  indexing.md  storage.md  vision.md
docs/mkdocs/api/utils/: config_loader.md  errors.md  helper_functions.md  models.md
docs/mkdocs/architecture-design/: architecture.md
docs/mkdocs/guides/: contributing.md  developer-instructions.md  examples.md  getting-started.md  installation.md  pre-commit-hooks.md  testing.md
examples/: create-cosmos-data-store.py  create-data-store-with-splitting.py  create-data-store.py  llm.py  rag-example.py  upload-chunks.py  vllm.py
examples/data-base/: azure-cosmos-create.py  azure-cosmos-db-nosql.py  azure-cosmos-load.py  cosmos-upload-chunks.py
examples/data/pond/: deltares-pond-history.txt
examples/data/storage/: docstore.json  index_store.json  metadata_index.csv
examples/notebooks/: create-data-store.ipynb  rag.ipynb  vllm.ipynb
pr-21/: 404.html  change-log.html  index.html  license.html  objects.inv  sitemap.xml
pr-21/api/: app.html  cli.html  indexing.html  storage.html  vision.html
pr-21/api/utils/: config_loader.html  errors.html  helper_functions.html  models.html
pr-21/architecture-design/: architecture.html
pr-21/guides/: contributing.html  developer-instructions.html  examples.html  getting-started.html  installation.html  pre-commit-hooks.html  testing.html
pr-21/search/: search_index.json
src/dllm_rag/indexing/: index_manager.py
src/dllm_rag/retrieval/: storage.py
src/dllm_rag/utils/: config_loader.py  logger.py  models.py
src/ebird/: __init__.py  trial.py
src/llm_rag/indexing/: index_manager.py
src/llm_rag/retrieval/: storage.py
src/llm_rag/utils/: config_loader.py  errors.py  models.py
src/vfn_rag/: cli.py
src/vfn_rag/config/: entities.py
src/vfn_rag/indexing/: index_manager.py
src/vfn_rag/retrieval/: base_storage.py  cosmos.py  cosmos_client.py  cosmos_storage.py  storage.py
src/vfn_rag/services/: __init__.py  query.py
src/vfn_rag/utils/: config_loader.py  helper_functions.py  models.py  vault.py
src/vfn_rag/vision/: utils.py  vision_model.py
src/voice_for_nature_backend/: api_requests.py  chat_model.py  ebird.py  interface.py  interface_utils.py
src/voice_for_nature_backend/data/: bird-wikipedia-article.txt  fish-chatgpt-text.txt
tests/: conftest.py  test_api_requests.py  test_chat_app.py  test_ebird.py
tests/indexing/: test_index_manager.py
tests/retrieval/: test_storage.py
tests/utils/: test_config_loader.py  test_helper_functions.py  test_logger.py  test_models.py  test_vault.py
