[tool.poetry]
name = "voice-for-nature-backend"
version = "0.1.0"
description = "Overall package"
authors = ["Mostafa Farrag <mostafa.farrag@deltares.nl>"]
license = "Proprietary"
readme = "README.md"
repository = "https://github.com/openearth/voice-for-nature"

packages = [
    { include = "voice_for_nature_backend", from = "src"}
]

[tool.poetry.urls]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.ebird.dependencies]
requests= "^2.26.0"

[tool.poetry.group.llm.dependencies]
llama-index = "^0.11.12"
llama-index-embeddings-huggingface = "^0.3.1"
llama-index-llms-ollama = "^0.3.2"

[tool.poetry.group.analysis.dependencies]
jupyterlab= "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
coverage = {extras = ["toml"], version = "^7.6.1"}
safety = "^3.2.7"
mypy = "^1.11.2"
typeguard = "^4.3.0"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
pre-commit = "^3.8.0"
black = "^24.8.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.8.19"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.14.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.8.2"
pre-commit-hooks = "^4.3.0"
pre-commit-commit-msg-hooks = "^0.1.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["download_from_soildb"]

[tool.coverage.report]
show_missing = true
fail_under = 30

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
ensure_newline_before_comments=true
profile="black"

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]


[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
